Don't display play/pause in mobile reader mode

--- a/src/dusa.css
+++ b/src/dusa.css
@@ -379,6 +379,10 @@ div#codemirror-root .cm-scroller {
     display: flex;
   }
 
+  .mobile-view-editor #explorer-header .control {
+    display: none;
+  }
+
   #explorer-header #explorer-status .extended-status {
     display: none;
   }
